[project]
name = "comfyui-dazzlenodes"
description = "DazzleNodes - Collection of productivity custom nodes for ComfyUI workflows with smart auto-sync and dynamic imports"
version = "0.1.0"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"

# No pip dependencies - all dependencies provided by ComfyUI or submodules
dependencies = []

# Optional development dependencies
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Repository = "https://github.com/DazzleNodes/DazzleNodes"
Issues = "https://github.com/DazzleNodes/DazzleNodes/issues"
Changelog = "https://github.com/DazzleNodes/DazzleNodes/releases"
Documentation = "https://github.com/DazzleNodes/DazzleNodes#readme"

# ComfyUI Registry Configuration
# See: https://docs.comfy.org/registry/publishing
[tool.comfy]
PublisherId = "djdarcy"
DisplayName = "DazzleNodes Collection"
Icon = ""

# Publishing: Update version in this file and push to main branch
# GitHub Actions will automatically publish to ComfyUI Registry

# Collection Notes:
# - Aggregates multiple custom nodes via git submodules
# - Auto-syncs web resources on ComfyUI startup
# - Provides shared utilities via web_src/core/
