[project]
name = "comfyui-dazzlenodes"
description = "DazzleNodes - Collection of productivity custom nodes for ComfyUI workflows with smart auto-sync and dynamic imports"
dynamic = ["version"]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"

# No pip dependencies - all dependencies provided by ComfyUI or submodules
dependencies = []

# Optional development dependencies
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Repository = "https://github.com/DazzleNodes/DazzleNodes"
Issues = "https://github.com/DazzleNodes/DazzleNodes/issues"
Changelog = "https://github.com/DazzleNodes/DazzleNodes/releases"
Documentation = "https://github.com/DazzleNodes/DazzleNodes#readme"

# ComfyUI Registry Configuration
# See: https://docs.comfy.org/registry/publishing
[tool.comfy]
PublisherId = "djdarcy"
DisplayName = "DazzleNodes Collection"
Icon = ""

# Publishing: Version is automatically managed by git-repokit versioning system
# - Version is read from version.py (updated by git hooks)
# - Update MAJOR, MINOR, PATCH in version.py to change version
# - GitHub Actions will automatically publish when version changes

# Collection Notes:
# - Aggregates multiple custom nodes via git submodules
# - Auto-syncs web resources on ComfyUI startup
# - Provides shared utilities via web_src/core/

# Build system configuration
[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

# Dynamic version from version.py
[tool.setuptools.dynamic]
version = {attr = "version.BASE_VERSION"}
