[project]
name = "comfyui-dazzlenodes"
version = "0.2.4-alpha"
description = "A curated collection of image/latent creation and transformation custom nodes for ComfyUI. Each node is independently developed and maintained, but packaged together for convenient installation."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"

# No pip dependencies - all dependencies provided by ComfyUI or submodules
dependencies = []

# Optional development dependencies
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Repository = "https://github.com/DazzleNodes/DazzleNodes"
Issues = "https://github.com/DazzleNodes/DazzleNodes/issues"
Changelog = "https://github.com/DazzleNodes/DazzleNodes/releases"
Documentation = "https://github.com/DazzleNodes/DazzleNodes#readme"

# ComfyUI Registry Configuration
# See: https://docs.comfy.org/registry/publishing
[tool.comfy]
PublisherId = "djdarcy"
DisplayName = "DazzleNodes Collection"
Icon = ""

# Publishing: Version is automatically managed by git-repokit versioning system
# - Version is read from version.py (updated by git hooks)
# - Update MAJOR, MINOR, PATCH in version.py to change version
# - GitHub Actions will automatically publish when version changes

# Collection Notes:
# - Aggregates multiple custom nodes via git submodules
# - Auto-syncs web resources on ComfyUI startup
# - Provides shared utilities via web_src/core/

# Build system configuration
[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

# Note: Version is now static in [project] section above for ComfyUI Registry compatibility
# The version.py file is still maintained by git hooks for tracking purposes
# When bumping version, update both:
#   1. MAJOR/MINOR/PATCH in version.py (git hooks auto-update __version__)
#   2. version field in [project] section above (for comfy-cli detection)
